--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background: #222;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p, i {
+  font-family: Courier New;
+}
+
+b {
+  color: red;
+}
+
+a, a:visited {
+  color: rgb(133, 0, 133);
+  text-decoration: none;
+  font-family: Courier New;
+  font-weight: bold;
+}
+
+a:hover {
+  color: rgb(196, 0, 196);
+}
+
+/* div {
+  border: 2px solid white;
+} */
+
+.message {
+  height: 100%;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.yes {
+  font-size: 30vh;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: greenyellow;
+  font-weight: bolder;
+}
+
+.no {
+  font-size: 30vh;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: red;
+  font-weight: bolder;
+}
+
+.app {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+button {
+  font-size: 4vw;
+  color: red;
+  text-align: center;
+  text-decoration: none;
+  background: none;
+  outline: none;
+  border: 3px solid rgb(200, 200, 200);
+  border-radius: 5px;
+  padding: 5px;
+  transition-property: all;
+  transition-duration: 0.5s;
+}
+
+button:hover {
+  color: white;
+  background: rgba(0, 0, 0, 0.158);
+  border-radius: 20px;
+}
+
+.header {
+  width: 100%;
+  height: 20vh;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.title {
+  font-size: 8vw;
+}
+
+.content {
+  width: 95%;
+  height: 1px;
+  display: none;
+  opacity: 0%;
+  position: relative;
+  overflow: hidden;
+  margin: auto;
+}
+
+.activeContent {
+  width: 95%;
+  height: 60vh;
+  opacity: 100%;
+  position: relative;
+  animation-name: content_anim;
+  animation-duration: 2s;
+  overflow: auto;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@keyframes content_anim {
+  0% {height: 0; opacity: 0;}
+  50% {opacity: 0;}
+  100% {height: 60vh; opacity: 100%;}
+}
+
+.navigation {
+  width: 100%;
+  height: 20vh;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
