--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,15 @@ button:hover {
     height: 40vh;
   }
 
+  p {
+    font-size: 2rem;
+  }
+
+  .navigation {
+    height: 15vh;
+  }
+
   button {
-    font-size: 6vh;
+    font-size: 5vh;
   }
 }
