--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,16 @@ button:hover {
     font-size: 15vw;
   }
 
+  .activeContent {
+    height: 50vh;
+  }
+
+  @keyframes content_anim {
+    0% {height: 0; opacity: 0;}
+    50% {opacity: 0;}
+    100% {height: 50vh; opacity: 1;}
+  }
+
   .header {
     height: 20vh;
   }
